reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_with_variant_skip_deserialize-5.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_python_code :: < TestEnumWithVariantSkipDeserialize > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class ReflectapiDemoTestsSerdeInputTestEnumWithVariantSkipDeserialize(str, Enum):
    pass


class ReflectapiDemoTestsSerdeOutputTestEnumWithVariantSkipDeserialize(str, Enum):
    _VARIANT1 = "_Variant1"


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class serde:
            """Namespace for serde types."""

            class input:
                """Namespace for input types."""

                TestEnumWithVariantSkipDeserialize = (
                    ReflectapiDemoTestsSerdeInputTestEnumWithVariantSkipDeserialize
                )

            class output:
                """Namespace for output types."""

                TestEnumWithVariantSkipDeserialize = (
                    ReflectapiDemoTestsSerdeOutputTestEnumWithVariantSkipDeserialize
                )


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[
            reflectapi_demo.tests.serde.input.TestEnumWithVariantSkipDeserialize
        ] = None,
    ) -> ApiResponse[
        reflectapi_demo.tests.serde.output.TestEnumWithVariantSkipDeserialize
    ]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.output.TestEnumWithVariantSkipDeserialize]: Response containing reflectapi_demo.tests.serde.output.TestEnumWithVariantSkipDeserialize data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.output.TestEnumWithVariantSkipDeserialize,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[
            reflectapi_demo.tests.serde.input.TestEnumWithVariantSkipDeserialize
        ] = None,
    ) -> ApiResponse[
        reflectapi_demo.tests.serde.output.TestEnumWithVariantSkipDeserialize
    ]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.output.TestEnumWithVariantSkipDeserialize]: Response containing reflectapi_demo.tests.serde.output.TestEnumWithVariantSkipDeserialize data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.output.TestEnumWithVariantSkipDeserialize,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsSerdeInputTestEnumWithVariantSkipDeserialize,
    ReflectapiDemoTestsSerdeOutputTestEnumWithVariantSkipDeserialize,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
