reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_with_variant_untagged-3.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_rust_code :: < TestEnumWithVariantUntagged > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn inout_test(
            &self,
            input: super::types::reflectapi_demo::tests::serde::TestEnumWithVariantUntagged,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::serde::TestEnumWithVariantUntagged,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(&self.client, "/inout_test", input, headers).await
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod serde {

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub enum TestEnumWithVariantUntagged {
                    #[serde(untagged)]
                    Variant1(u8),
                }
            }
        }
    }
}
